--- a/production/redirect.html
+++ b/production/redirect.html
@@ -24,10 +24,10 @@
     <meta property="twitter:description" content="Redirecting to the download page. Your download will start shortly.">
     <meta property="twitter:image" content="https://typeblitz.tech/assets/download-thumbnail.jpg">
 
-    <!-- Bootstrap CSS (or your preferred CSS framework) -->
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom Styles for Responsiveness -->
+    <!-- Custom Styles -->
     <style>
         body {
             display: flex;
@@ -35,64 +35,78 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f0f8ff;
+            /* Match background color to the GIF */
         }
 
         .container {
             text-align: center;
         }
 
-        .giphy-embed-container {
+        .loading-animation img {
+            width: 200px;
+            /* Medium size */
+            height: auto;
             margin-bottom: 20px;
+            border: 5px solid #007bff;
+            /* Optional: Add a border to match the design theme */
+            border-radius: 8px;
+            /* Optional: Rounded corners for a modern look */
         }
 
-        .giphy-embed-container img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 0 auto;
+        h1 {
+            font-size: 2.5rem;
+            /* Adjusted font size */
+            color: #007bff;
+        }
+
+        p {
+            font-size: 1.25rem;
+            /* Adjusted font size */
+            color: #6c757d;
         }
 
         @media (min-width: 768px) {
             .container {
+                display: flex;
                 flex-direction: row;
-                justify-content: flex-end;
+                justify-content: center;
+                align-items: center;
             }
 
-            .giphy-embed-container {
-                margin-right: 20px;
+            .loading-animation {
+                margin-right: 30px;
             }
         }
     </style>
 </head>
 
 <body>
-
-    <div class="container d-flex justify-content-center align-items-center vh-100">
-        <div class="giphy-embed-container">
-            <img src="files/giphy.gif" alt="Loading animation" class="img-fluid">
+    <div class="container d-flex flex-column justify-content-center align-items-center">
+        <div class="loading-animation">
+            <img src="files/giphy.gif" alt="Loading animation">
         </div>
         <div>
             <h1>Redirecting...</h1>
-            <p class="lead">Taking you to the download page.</p>
+            <p class="lead">You will be taken to the download page shortly.</p>
         </div>
     </div>
 
     <!-- JavaScript for Redirection -->
     <script>
-        setTimeout(function () {
+        setTimeout(() => {
             window.location.href = "files/v2.6.html"; // Replace with your actual download page URL
         }, 5000); // Redirect after 5 seconds
     </script>
 
-    <!-- Bootstrap JS and Popper.js (required for Bootstrap JavaScript plugins) -->
+    <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Simple Analytics -->
     <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
     <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="Simple Analytics tracking"
-            referrerpolicy="no-referrer-when-downgrade" /></noscript>
+            referrerpolicy="no-referrer-when-downgrade"></noscript>
 </body>
 
 </html>
